edit header h4 to prevent pushing against nav and to valign w/ header h1

--- a/scss/_add-style.scss
+++ b/scss/_add-style.scss
@@ -28,6 +28,7 @@ header {
   h4 {
     font-style: italic;
     margin: 0;
+    padding: 0 0 0 calc(.125*1em);
   }
 }
 
